--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,20 +17,20 @@ svg2pdf = { path = ".", default-features = false, version = "0.11.0" }
 clap = { version = "4.4.2", features = ["derive"] }
 clap_complete = "4.4.3"
 clap_mangen = "0.2.14"
-fontdb = "0.20.0"
+fontdb = "0.21.0"
 image = { version = "0.25.1", default-features = false, features = ["jpeg", "png", "gif"] }
-miniz_oxide = "0.7"
+miniz_oxide = "0.8.0"
 once_cell = "1.18.0"
 oxipng = { version = "9", default-features = false, features = ["filetime", "parallel", "zopfli"] }
 pdf-writer = "0.10"
 pdfium-render = "0.8.6"
 termcolor = "1.2"
-usvg = {git = "https://github.com/LaurenzV/resvg", rev = "1c2b6bd0"}
+usvg = "0.43.0"
 tiny-skia = "0.11.4"
 unicode-properties = "0.1.1"
-resvg = {git = "https://github.com/LaurenzV/resvg", rev = "1c2b6bd0"}
+resvg = "0.43.0"
 subsetter = {git = "https://github.com/typst/subsetter", rev = "4e0058b"}
-ttf-parser = { version = "0.21.1" }
+ttf-parser = { version = "0.24.1" }
 siphasher = { version = "1.0.1"}
 krilla = {path = "../krilla"}
 
